2011-03-09  Helmut Eller  <heller@common-lisp.net>

	* slime-editing-commands.el (slime-beginning-of-defun): Call
	beginning-of-defun with call-interactively so that the mark gets
	pushed.

2011-01-22  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-shortcut-help): Don't make ? an alias
	for help, ? is bound to minibuffer-completion-help, and you can't
	enter it.

2011-01-20  Helmut Eller  <heller@common-lisp.net>

	* swank-mit-scheme.scm (swank:load-file): Print the result
	instead of returning it which breaks the protocol.

	* swank-mit-scheme.scm: Require release 9.

2011-01-12  Helmut Eller  <heller@common-lisp.net>

	Some more MIT Scheme fixes.

	* swank-mit-scheme.scm (swank:compile-string-for-emacs)
	(swank:compile-file-for-emacs): Use new result format.
	(swank:disassemble-form): Added with the needed kludgery for
	quoted forms.
	(swank:swank-require): Define this as nop.

2011-01-11  Helmut Eller  <heller@common-lisp.net>

	Some upgrades for MIT Scheme backend.

	* swank-mit-scheme.scm (netcat, netcat-accept): Use netcat-openbsd
	syntax.  This version doesn't print the port number anymore
	defeating the original purpose of using netcat.
	(start-swank): Hardcode portnumber to 4055 until somebody cares
	enough to write proper server ports.
	(emacs-rex): Include a nonsense message with the :abort reply.

2010-12-10  Stas Boukarev  <stassats@gmail.com>

	* slime-sprof.el (slime-sprof-browser): Rename to
	`slime-sprof-report', leave `slime-sprof-browser' as an alias.

2010-12-09  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (emacs-inspect): Work on methods
	without associated generic function.

2010-10-28  Stas Boukarev  <stassats@gmail.com>

	* swank-package-fu.lisp (list-structure-symbols): Include the name
	of the structure too.

2010-10-17  Helmut Eller  <heller@common-lisp.net>

	Some updates to the Kawa backend.

	* swank-kawa.scm (%%runnable): Use standard
	gnu.mapping.RunnableClosure but print the stacktrace on