@@ -99,7 +99,7 @@
     (slime-insert-propertized
      (slime-sprof-browser-name-properties)
      (format (format "%%-%ds " name-length)
-             (abbreviate-name name name-length)))
+             (slime-sprof-abbreviate-name name name-length)))
     (insert (format "%6.2f " self))
     (when cumul
       (insert (format "%6.2f " cumul))
@@ -110,7 +110,7 @@
        `(profile-index ,index expanded nil)))
     (insert "\n")))
 
-(defun abbreviate-name (name max-length)
+(defun slime-sprof-abbreviate-name (name max-length)
   (lexical-let ((length (min (length name) max-length)))
     (subseq name 0 length)))
 
@@ -166,7 +166,7 @@
            (slime-sprof-browser-name-properties)
            (let ((len (- 59 (* 2 nesting))))
              (format (format "%%-%ds " len)
-                     (abbreviate-name name len))))
+                     (slime-sprof-abbreviate-name name len))))
           (slime-sprof-browser-add-line-text-properties
            `(profile-sub-index ,index))
           (insert (format "%6.2f" cumul)))))))
